crates/ferromark_renderer/tests/snapshots/renderer/table_stops_before_block_with_pipe.snap
---
source: crates/ferromark_renderer/tests/support/snapshot.rs
description: "| abc | def |\n| --- | --- |\n> quote | value\n"
---
<table>
<thead>
<tr>
<th>abc</th>
<th>def</th>
</tr>
</thead>
</table>
<blockquote>
<p>quote | value</p>
</blockquote>
