crates/ferromark_renderer/tests/snapshots/renderer/task_list_without_gfm_renders_literal.snap
---
source: crates/ferromark_renderer/tests/support/snapshot.rs
description: "- [x] done\n"
---
<ul>
<li>[x] done</li>
</ul>
