crates/ferromark_renderer/tests/snapshots/renderer/unordered_list_basic.snap
---
source: crates/ferromark_renderer/tests/support/snapshot.rs
description: "- a\n- b\n- c\n"
---
<ul>
<li>a</li>
<li>b</li>
<li>c</li>
</ul>
